Finalize create and claim instructions

--- a/src/02.03.03_Instruction_logic.md
+++ b/src/02.03.03_Instruction_logic.md
@@ -61,7 +61,13 @@ Now that our `VestingContract` object is properly initialized, we need to save t
 };
 
 let mut total_amount = 0u64;
+let mut last_timestamp: u64 = 0;
 for (schedule, slot) in schedule.iter().zip(vesting_contract.schedules.iter_mut()) {
+    if schedule.unlock_timestamp < last_timestamp {
+        msg!("The schedules should be provided in order!");
+        return Err(ProgramError::InvalidArgument);
+    }
+    last_timestamp = schedule.unlock_timestamp;
     *slot = *schedule;
     total_amount = total_amount.checked_add(schedule.quantity).unwrap();
 }
@@ -76,6 +82,11 @@ _Dont' even think about it!_
 
 The only exception to this rule is `checked_div` when dividing by a constant.
 If you know it to be non-zero because it says so on the same line of code, then you should favor readability.
+
+We also check that the schedules are given in the right order with `last_timestamp`.
+This will simplify our computation of what quantity of assets should be unvested.
+This is typically the kind of refinement that you can notice later on while implementing other instructions.
+Always check your assumptions and enforce them if necessary.
 
 Finally, we transfer the funds to our vault using the `spl_token` `transfer` instruction:
 ```rust,noplayground
