--- a/src/02.02_VestingContract.md
+++ b/src/02.02_VestingContract.md
@@ -1,6 +1,6 @@
 # VestingContract
 
-The core data structure on which we are building our program will be called `VestingContract`. 
+The core data structure on which we are building our program will be called `VestingContract`.
 Since we will be using type-casting through the `bytemuck` library, we need to iterate and think about the various types of constraints our definition will need to obey.
 
 ## First iteration: what data do we need?
@@ -61,7 +61,6 @@ Since `VestingContract` implements the `Clone`, `Copy`, `Zeroable` and `Pod` tra
 The last two traits are related to `bytemuck` and enable type casting.
 Same goes for the `repr(C)` atrribute which is essential for type casting.
 
-
 ```rust,compile_fail
 #[derive(Clone, Copy, Zeroable, Pod)]
 #[allow(missing_docs)]
@@ -89,7 +88,7 @@ pub struct VestingSchedule {
 
 However, the above still does not compile. To sum up, the core bytemuck trait we are interested in is the `Pod` trait. This trait requires the `Zeroable` and `Copy` traits. However, a `Vec` does not implement the `Copy` trait. In general, this is due to the fact that `Vec` is a pointer which _owns_ a section of heap memory. Copying it would mean allocating a new section of heap memory, whereas the `Copy` trait is reserved for variables which exist on the stack.
 
-In fact it is impossible to directly cast `Vec` objects. 
+In fact it is impossible to directly cast `Vec` objects.
 To work around this limitation, we split our object into a reference to a header and a reference to a slice of `VestingSchedule` objects.
 This means that the `VestingContract` object will hold cast references to the underlying objects, instead of being a direct cast by itself.
 This layer of indirection is of no consequence in terms of performance, and allows us a lot more flexibility in terms of the kind of data structures we can type cast.
@@ -122,7 +121,7 @@ pub struct VestingSchedule {
 }
 ```
 
-Ah, and we also added an extra field called `_padding`. 
+Ah, and we also added an extra field called `_padding`.
 This is where using directly type-cast data structures can seem daunting at first.
 Let's take some time to talk about memory alignment.
 
@@ -132,33 +131,38 @@ Modern CPUs are wonderful things which are able to manipulate all kinds of objec
 In practice, every operation which a CPU can execute (also called an assembly instruction), _is_ actual physical wiring on the chip.
 Depending on the chip, designers can cut down on complexity and conversely increase performance by requiring data to be aligned in a certain way.
 As a somewhat appropriate analogy, let's take a list of five 8-letter words:
-```
+
+```text
 although
 boundary
 calendar
 chemical
 diameter
 ```
+
 Providing a CPU with non-aligned data is akin to presenting you the same list in this way:
-```
+
+```text
 although
        boundary
    calendar
                 chemical
  diameter
 ```
+
 It's just harder to parse, because our ability to parse lists of words is _hard-wired_ to a certain format.
 So let's give our poor CPUs a break and look at alignment constraints on the `BPF` architecture.
 
 For any memory address, we say that it is aligned to `n` if its address is a multiple of `n`.
 On the Solana BPF (the on-chain program runtime) and `x86_64` architectures, alignment constraints are as follows:
+
 - Primitive types must be aligned to their size, up to a maximum of 8.
 - Structs must be aligned to the maximum of their fields' alignment constraints.
 
 For primitive types, this yields the following table:
 
 | Primitive Type | Size (in bytes) | Alignment constraint |
-| -------------- | --------------- | -------------------- |
+|----------------|-----------------|----------------------|
 | `u8`, `i8`     | 1               | 1                    |
 | `u16`, `i16`   | 2               | 2                    |
 | `u32`, `i32`   | 4               | 4                    |
@@ -183,7 +187,7 @@ As a nice bonus, if you later want to add a new field to the object, you'll be a
 
 ### Final definition
 
-We then define our `VestingContract` object. 
+We then define our `VestingContract` object.
 You should notice that since `VestingContract` holds references, it has a generic lifetime argument.
 While this can seem daunting, it will not affect its use.
 `bonfida-utils` can help us out here by automatically deriving the `WrappedPodMut` trait.
@@ -198,6 +202,7 @@ pub struct VestingContract<'a> {
 ```
 
 The `impl` blocks are refactored in the following manner:
+
 ```rust
 impl VestingContractHeader {
     pub const LEN: usize = std::mem::size_of::<Self>();
@@ -256,7 +261,7 @@ To make this less error-prone, we need to write a helper static method called `c
 
 You should note that we're always adding 8 bytes to account for the type tag.
 
-`find_key` is the last method we need to take a look at. This method is useful when we want our account's address to be uniquely determined by a set of parameters. For instance, if we wanted to allow for only one vesting contract per recipient, we could write `find_key` as 
+`find_key` is the last method we need to take a look at. This method is useful when we want our account's address to be uniquely determined by a set of parameters. For instance, if we wanted to allow for only one vesting contract per recipient, we could write `find_key` as
 
 ```rust
     pub fn find_key(program_id: &Pubkey, recipient: &Pubkey) -> (Pubkey, u8) {
@@ -265,7 +270,7 @@ You should note that we're always adding 8 bytes to account for the type tag.
     }
 ```
 
-This means that our vesting contract would be a unique program-derived address (PDA). 
+This means that our vesting contract would be a unique program-derived address (PDA).
 However, in our case, we do not want to add this constraint since any user can hold several vesting contracts.
 This is why we won't be using a PDA here, and we can just delete the `find_key` method and its associated `SEED` constant.
 
