--- a/src/02.04_Instruction_claim.md
+++ b/src/02.04_Instruction_claim.md
@@ -185,17 +185,19 @@ pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], params: &Params) -
     Ok(())
 }
 ```
- Once this is done, we need to add this instruction and its binding to the `instruction.rs` enum as well as `processor.rs`.
 
- In `instruction.rs`, we add the `Claim` variant to the `ProgramInstruction` enum. We also add the following binding:
+Once this is done, we need to add this instruction and its binding to the `instruction.rs` enum as well as `processor.rs`.
+
+In `instruction.rs`, we add the `Claim` variant to the `ProgramInstruction` enum. We also add the following binding:
+
  ```rust,noplayground
  pub fn claim(accounts: claim::Accounts<Pubkey>, params: claim::Params) -> Instruction {
     accounts.get_instruction_cast(crate::ID, ProgramInstruction::Claim as u8, params)
 }
- ```
- In order for this binding to compile, you need to add the `instruction_params_casting` feature to the `bonfida-utils` dependency in your `Cargo.toml`.
+```
 
- In `processor.rs`, we add the following match variant:
+In `processor.rs`, we add the following match variant:
+
  ```rust,noplayground
     ProgramInstruction::Claim => {
     msg!("Instruction: Claim");
@@ -204,7 +206,8 @@ pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], params: &Params) -
 }
  ```
 
- The `bytemuck::from_bytes` logic isn't strictly necessary here, and in practice you would omit it.
+The `bytemuck::from_bytes` logic serves as an illustration for the syntax to use when dealing with simple parameters.
+You can omit it.
 
- With this, the entire logic of our program is done!
- The next step is to add some basic integration tests.
+With this, the entire logic of our program is done!
+The next step is to add some basic integration tests.
