--- a/src/02.01_Encoding_state.md
+++ b/src/02.01_Encoding_state.md
@@ -19,7 +19,7 @@ This approach has several advantages:
 
 - Packed representation: this representation is quite space-efficient.
 - Easier to write bindings in languages other than Rust.
-- No constraint on memory alignment and padding
+- No constraint on memory alignment and padding.
 
 The main disadvantage posed by Borsh is that the serialization and deserialization operations have to iterate through the entire data slice, and perform copy operations.
 This means that this approach is impractical for larger data structures and can consume a substantial amount of the available compute budget.
@@ -42,6 +42,6 @@ These advantages come at the cost of some constraints:
 - Certain types have to be aligned to particular offsets.
 - Object sizes must be a multiple of their own alignment constraint.
 
-While working with theses kinds of abstract constraints can seem quite daunting, `bytemuck` provides us with convenient derive macros which are able to detect these issues before compilation. By looking at an example, we'll see how these constraints come into play, and how we can deal with them.
+While working with these kinds of abstract constraints can seem quite daunting, `bytemuck` provides us with convenient derive macros which are able to detect these issues before compilation. By looking at an example, we'll see how these constraints come into play, and how we can deal with them.
 
 Finally, once our data structure is well-defined to play along with `bytemuck`, we can write a compatible `borsh` schema to leverage its implementations across various programming languages.
