--- a/src/02.02_VestingContract.md
+++ b/src/02.02_VestingContract.md
@@ -175,7 +175,7 @@ We would be tempted to use a `u8` here, but this would make the rest of the buff
 
 On the `BPF` architecture, being 8-aligned is essentially equivalent to being 0-aligned.
 Fortunately, this is also the case on the common `x86_64` architecture.
-Unfortunately, the apple ARM architecture (i.e. Apple M1, M2, etc.) can sometimes ask for an alignment of 16.
+Unfortunately, the Apple ARM architecture (i.e. Apple M1, M2, etc.) can sometimes ask for an alignment of 16.
 To get around this, we can use a compilation flag to replace every instance of a type-cast `u128` by a `[u64;2]`.
 Even if you don't own an Apple ARM computer, it is important to think about members of the community that do.
 We will discuss how to tackle this issue in an annex.
