--- a/src/02.03.01_Required_accounts.md
+++ b/src/02.03.01_Required_accounts.md
@@ -111,9 +111,9 @@ check_account_owner(accounts.vesting_contract, program_id)?;
 
 We're going to be editing the `vesting_contract` account data, and we need to be sure that _only our program_ can alter this data.
 The Solana runtime constraints ensure that every byte of a program-owned account's data is either:
+- determined by the program's logic.
+- freshly allocated and therefore 0.
 
-- determined by the program's logic
-- freshly allocated and therefore 0
 This means that, as long as we trust our own program (which isn't a given considering our own program might be buggy), we should be able to trust the data that's held by its owned accounts.
 Failing to perform this check will expose our programs to all sorts of potential attacks.
 
