--- a/src/02.03.03_Instruction_logic.md
+++ b/src/02.03.03_Instruction_logic.md
@@ -1,6 +1,6 @@
 # Instruction Logic
 
-Our entry point into the instruction is always a function `process` with the following signature
+Our entry point into the instruction is always a `process` function with the following signature:
 
 ```rust,noplayground
 pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], params: Params) -> ProgramResult {
