--- a/src/02.03.04.01_Instruction_data.md
+++ b/src/02.03.04.01_Instruction_data.md
@@ -10,7 +10,7 @@ Borsh and the tools provided by `bonfida-utils` _should_ be enough for your use-
 The harder part is thinking about the business logic itself.
 You should think about what kind of values your program should allow as input.
 Be _as restrictive as possible_.
-If a user reports that their own use-case for your product is not handled due to theses restrictions, you can update your program.
+If a user reports that their own use-case for your product is not handled due to these restrictions, you can update your program.
 If your program's state / assets are compromised, you can still patch the vulnerability, but the incident will probably have cost you.
 
 To secure your program's business logic, we recommend a combination of unit and integration testing.
