--- a/src/02.03.04.02_Account_data.md
+++ b/src/02.03.04.02_Account_data.md
@@ -6,8 +6,8 @@ The second and hardest step is to look at account data itself.
 
 Broadly speaking, your program will interact with two kinds of accounts:
 
-- Accounts which it owns (and are therefore part of its own state)
-- Accounts owned by other programs
+- Accounts which it owns (and are therefore part of its own state).
+- Accounts owned by other programs.
 
 ## Thinking about your program's state
 
@@ -19,7 +19,7 @@ This makes sure that those accounts can't be used as an attack vector.
 Outside of this notion of account tagging, the safety of an account owned by your own program depends on the safety of your _entire business logic_.
 This is due to the fact that a program-owned account's data is either just zeros or the result of your program's previous interactions with it.
 This means that whenever your program modifies an account's data (or its state in general), you should make sure that the state remains safe in all situations.
-To deal with theses kinds of vulnerabilities, a clear coding style and proper reviews and even audits are your friends.
+To deal with these kinds of vulnerabilities, a clear coding style and proper reviews and even audits are your friends.
 
 Finally, we have accounts owned by other programs.
 More often than not, depending on an other program's accounts means depending on this program's own safety.
@@ -71,10 +71,10 @@ pub fn transfer(
 Ah, the documentation is quite lackluster.
 Looking at the binding's signature already gives us a bit of information.
 However, we want to know as much as possible about this instruction.
-We have several options here:
+We have several options here :
 
-- Find some documentation elsewhere
-- Read the instruction code
+- Find some documentation elsewhere.
+- Read the instruction code.
 
 As a general rule of thumb, there's a pretty straightforward way to find the documentation we need elsewhere.
 For some reason, program developers are more often than not given less documentation than frontend ones.
@@ -288,6 +288,6 @@ The other token account at play in our `create` instruction only has to emit the
 We can trust this simple constraint to be enforced by `spl_token` itself when we call the `transfer` instruction.
 
 However, our vault account will remain tied to our vesting contract instance for the entirety of its lifetime.
-We must therefore make sure that we're getting _precisely_ we need here.
+We must therefore make sure that we're getting _precisely_ what we need here.
 Our vault account can be thought of as a piece of _third-party state_ for our program.
 This is why we need to understand it as well as we understand our program's own state.
