--- a/src/02.03_Instruction_create.md
+++ b/src/02.03_Instruction_create.md
@@ -9,8 +9,8 @@ We should also alter the log message in `processor.rs` from `"Instruction: Examp
 
 This primtive will perform several operations:
 
-- Initialize a new `VestingContract` account/object
-- Configure the `VestingContract` with user-provided parameters
-- Transfer funds into the program vault
+- Initialize a new `VestingContract` account/object.
+- Configure the `VestingContract` with user-provided parameters.
+- Transfer funds into the program vault.
 
 An instruction's specification is defined by its `Accounts` and `Params` objects. Let's start by thinking about what kinds of accounts we'll need, and then we'll take a look at the associated parameters.
