--- a/src/02.04_Instruction_claim.md
+++ b/src/02.04_Instruction_claim.md
@@ -1,13 +1,13 @@
 # Writing an instruction: claim
 
 The final instruction we need to write is `claim`.
-This instruction allows a vesting contract _owner_ to claim there assets when those unvest.
+This instruction allows a vesting contract _owner_ to claim their assets when those unvest.
 The design and implementation process will be mostly similar to the previous section.
 Therefore we'll go a bit faster here and slow down when there are interesting considerations to ponder.
 
 ## Adding the skeleton for a new instruction
 
-We begin by duplicating the `create.rs` file, renaming it to `claim.rs`, declairing the module in `processor.rs` and wiping our `create.rs` business logic.
+We begin by duplicating the `create.rs` file, renaming it to `claim.rs`, declaring the module in `processor.rs` and wiping our `create.rs` business logic.
 An alternative would have been to keep the example instruction and restart from there, but it doesn't make much of a difference.
 
 We won't be needing parameters here : we'll simply extract as many tokens as possible from the vesting contract.
@@ -93,7 +93,7 @@ impl<'a, 'b: 'a> Accounts<'a, AccountInfo<'b>> {
     }
 }
 
-pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], params: &Params) -> ProgramResult {
+pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], _params: &Params) -> ProgramResult {
     let accounts = Accounts::parse(accounts, program_id)?;
 
     // We begin by parsing the vesting contract account
@@ -184,6 +184,7 @@ pub fn process(program_id: &Pubkey, accounts: &[AccountInfo], params: &Params) -
 
     Ok(())
 }
+
 ```
 
 Once this is done, we need to add this instruction and its binding to the `instruction.rs` enum as well as `processor.rs`.
