--- a/src/02.03.04.03_Implementing_checks_on_third-party_state.md
+++ b/src/02.03.04.03_Implementing_checks_on_third-party_state.md
@@ -8,7 +8,7 @@ This is where program-derived addresses (PDAs) come into play.
 PDAs are Solana's solution for a recurring generic problem in program design : how can our program _own_ anything of value?
 Conventionally, owning an asset on a blockchain means controlling a private key the public key of which is set as its _owner_.
 Then, users can sign transactions to authorize operations on assets they own.
-They key to all of this is that the private key is only known to its owner.
+The key to all of this is that the private key is only known to its owner.
 
 Sometimes, we need a program to own something in the same way that a user does.
 However, any information a program has access to is available to anyone, so we can't really give a private key to our program.
@@ -48,7 +48,7 @@ The runtime can then make sure that the PDA to sign for corresponds to those see
 To add a layer of security, we want our vesting contract instances to be as compartmentalized as possible.
 Therefore, we will use the `VestingContract` key as seeds.
 Each instance already has its own vault, and this allows each contract to have its own separate signing authority.
-The altenative to this is related to the idea of _central state_, which can be required by some use cases and is supported by `bonfida-utils`.
+The alternative to this is related to the idea of _central state_, which can be required by some use cases and is supported by `bonfida-utils`.
 
 ## Writing the `check_vault_account` method
 
@@ -79,7 +79,7 @@ fn check_vault_account(
 ```
 
 If the provided vault account is invalid, we return the custom `InvalidVaultAccount` error.
-Let's define it in `error.rs` by modifyin the `TokenVestingError` struct:
+Let's define it in `error.rs` by modifying the `TokenVestingError` struct:
 
 ```rust,noplayground
 #[derive(Clone, Debug, Error, FromPrimitive)]
