--- a/src/02.02_VestingContract.md
+++ b/src/02.02_VestingContract.md
@@ -59,7 +59,7 @@ pub struct VestingSchedule {
 
 Since `VestingContract` implements the `Clone`, `Copy`, `Zeroable` and `Pod` traits we need to derive these traits for `VestingSchedule` as well.
 The last two traits are related to `bytemuck` and enable type casting.
-Same goes for the `repr(C)` atrribute which is essential for type casting.
+Same goes for the `repr(C)` attribute which is essential for type casting.
 
 ```rust,compile_fail
 #[derive(Clone, Copy, Zeroable, Pod)]
@@ -183,7 +183,7 @@ We will discuss how to tackle this issue in an annex.
 So looking at our `VestingContractHeader` object, we can see that it contains a `u64` field.
 This means that its size has to be a multiple of 8, which is why we add 7 bytes of padding.
 In practice, these will be implicitly 0 and won't be used by any of our program logic.
-As a nice bonus, if you later want to add a new field to the object, you'll be able to do so while maintaing backwards compatibility!
+As a nice bonus, if you later want to add a new field to the object, you'll be able to do so while maintaining backwards compatibility!
 
 ### Final definition
 
