--- a/src/02.03.03_Instruction_logic.md
+++ b/src/02.03.03_Instruction_logic.md
@@ -37,7 +37,7 @@ let expected_vesting_contract_account_size = VestingContract::compute_allocation
 A refinement to this program would involve taking care of the allocation ourselves, thus making sure that the supplied account will be of the correct size.
 However, as long as we supply our users with bindings which can take care of this allocation, this is not really an issue.
 Allocating an account within a program is only required when allocating Program-Derived Addresses (PDAs).
-As discused earlied, this is not a concern here.
+As discussed earlier, this is not a concern here.
 
 Once we have verified that the account is properly sized, we can actually initialize our `VestingContract` account, and then retrieve it!
 
@@ -80,7 +80,7 @@ Using checked math is _absolutely essential_.
 Sometimes it might seem redundant.
 Sometimes it might actually be redundant.
 But it's better to think about it this way: if it _can_ overflow, it _will_ overflow.
-_Dont' even think about it!_
+_Don't even think about it!_
 
 The only exception to this rule is `checked_div` when dividing by a constant.
 If you know it to be non-zero because it says so on the same line of code, then you should favor readability.
