--- a/src/02.03.04.02_Account_data.md
+++ b/src/02.03.04.02_Account_data.md
@@ -39,7 +39,7 @@ As it just so happens, our program is currently vulnerable because we don't look
 ## Understanding your on-chain dependencies: `spl-token`
 
 Since on-chain programs are security-critical applications, it is essential to take the time to read through the official documentation.
-It often contains security recommentations and can provide you with a better idea of what you are dealing with.
+It often contains security recommendations and can provide you with a better idea of what you are dealing with.
 In the case of `spl-token`, the documentation can be found [here](https://spl.solana.com/token).
 Since we are going to be using the smart contract's bindings, we should take a look at the library documentation as well.
 It can be found [here](https://docs.rs/spl-token/latest/spl_token/index.html).
@@ -184,7 +184,7 @@ Let's not care about any parameter mentioned here which isn't part of our Rust b
 This eliminates `connection` and `confirmOptions` from consideration.
 In general, you should make sure that you understand every option, because it's the only way to determine what's important.
 
-Using this knowledge, we can annotate the Rust binding for our particular use-case: transfering funds to a vault:
+Using this knowledge, we can annotate the Rust binding for our particular use-case: transferring funds to a vault:
 
 ```rust,noplayground
 /// Creates a Transfer instruction.
