--- a/src/02.03.04.03_Implementing_checks_on_third-party_state.md
+++ b/src/02.03.04.03_Implementing_checks_on_third-party_state.md
@@ -28,7 +28,7 @@ We can relate the two methods:
 ```rust,noplayground
 let seeds: &[u8] = &[...];
 let (k, nonce) = Pubkey::find_program_address(&[seeds], program_id).unwrap();
-let k2 = Pubkey::create_program_ddress(&[seeds, &[signer_nonce]]).unwrap();
+let k2 = Pubkey::create_program_address(&[seeds, &[signer_nonce]]).unwrap();
 // k and k2 will be the same
 assert_eq!(k, k2);
 ```
