--- a/src/02.03_Instruction_create.md
+++ b/src/02.03_Instruction_create.md
@@ -7,7 +7,7 @@ We'll start by renaming the `src/processor/example_instr.rs` file to `create.rs`
 Similarly we'll rename the `ExampleInstr` variant of the `instruction::ProgramInstruction` enum to `Create`, and the `instruction::example` binding to `create`.
 We should also alter the log message in `processor.rs` from `"Instruction: Example Instruction"` to `"Instruction: Create"`, and update the instruction comment at the top of `create.rs` to `//! Create a new token vesting contract`.
 
-This primtive will perform several operations:
+This primitive will perform several operations:
 
 - Initialize a new `VestingContract` account/object.
 - Configure the `VestingContract` with user-provided parameters.
