Add markdownlint directives

--- a/src/02.03.04.02_Account_data.md
+++ b/src/02.03.04.02_Account_data.md
@@ -84,6 +84,7 @@ I sincerely hope you're reading this and finding this paragraph outdated.
 In the meantime, we can get the information we _deserve_ by looking at the JavaScript/TypeScript documentation [here](https://solana-labs.github.io/solana-program-library/token/js/modules.html#transfer).
 This is what it roughly looks like:
 
+<!-- markdownlint-disable MD033 -->
 <blockquote>
 Transfer tokens from one account to another
 <h4 style="margin-top: 4px; margin-bottom: 3px">Parameters</h4>
@@ -178,6 +179,7 @@ Transfer tokens from one account to another
 </h4>
 Signature of the confirmed transaction
 </blockquote>
+<!-- markdownlint-disable MD037 -->
 
 We get more information here.
 Let's not care about any parameter mentioned here which isn't part of our Rust binding's signature.
